# rocm-blogs

./: .gitignore  .markdownlint-cli2.yaml  .markdownlint.yaml  .readthedocs.yaml  .taglist.csv  .wordlist.txt  OneDrive - Advanced Micro Devices Inc - Shortcut.lnk  README.md  check-keywords.py  check-tags.py  metadata-check.py
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: 0_issue_report.yml  1_feature_request.yml  config.yml
.github/workflows/: keyword-check.yml  linting.yml  markdown-metadata-linter.yml  taglinter.yml
blogs/: conf.py  contributor-bios.md  generate_grid.py  index.md
blogs/_static/asciinema/: offline-install.cast  offline-tool-1.cast  offline-tool-2.cast  offline-tool-3.cast
blogs/artificial-intelligence/automatic-mixed-precision/: .gitignore  README.md  amp_blog.py  config.yaml  pyproject.toml
blogs/artificial-intelligence/automatic-mixed-precision/docker/: docker-compose.yaml  dockerfile
blogs/artificial-intelligence/pytorch-tunableop/: .gitignore  README.md  README.mdt  pyproject.toml  render.py
blogs/artificial-intelligence/pytorch-tunableop/docker/: docker-compose.yaml  dockerfile
blogs/artificial-intelligence/pytorch-tunableop/src/: llm.py  matmul.py
blogs/artificial-intelligence/resnet/: .gitignore  README.md  pyproject.toml  resnet_blog.py
blogs/artificial-intelligence/resnet/docker/: docker-compose.yaml  dockerfile
blogs/authors/: adeem-jassani.md  alessandro-fanfarillo.md  alex-voicu.md  anton-smirnov.md  arseny-moskvichev.md  asitav-mishra.md  bob-robey.md  cheng-ling.md  clint-greene.md  corbin-robeck.md  damon-mcdougall.md  david-doscher.md  douglas-jia.md  eliot-li.md  fabricio-flores.md  garrett-byrd.md  george-markomanolis.md  gina-sitaraman.md  hari-sadasivan.md  joe-schoonover.md  justin-chang.md  lei-shao.md  logan-grado.md  luise-chen.md  mahdieh-ghazimirsaeed.md  maria-ruiz-varela.md  matt-elliott.md  michael-zhang.md  muhammad-osama.md  nicholas-curtis.md  nicholas-malaya.md  noah-wolfe.md  noel-chalmers.md  ossian-oreilly.md  paul-mullowney.md  phillip-dang.md  rajat-arora.md  rene-van-oostrum.md  sean-miller.md  sean-song.md  (+6 more)
blogs/sphinx/: _toc.yml.in  requirements.in  requirements.txt
blogs/templates/: recentposts.html
(+408 files in other folders)
